# YoloV5-Server

./: CMakeLists.txt  README.md  client.cpp  server.cpp
Yolo-Server/include/: TCPTransport.hpp  ThreadPool.hpp  config.h  preprocess.h  yololayer.h
Yolo-Server/src/: preprocess.cu  yololayer.cu
include/: infer.hpp  postprocess.hpp
src/: preprocess.cu
